--- a/src/css/dist.css
+++ b/src/css/dist.css
@@ -286,9 +286,9 @@ ul{
 }
 .lbcd-contiue{
     position: absolute;
-    left: 160px;
-    display: none;
-    top: 194px;
+    left: 0px;
+     display: none;
+    top: 35px;
     z-index: 2000;
 }
 .lbcd-contiue .lbcd-wrap{
@@ -530,6 +530,7 @@ ul{
     height: 38px;
     padding: 2px 0 0;
     background-color: #011912;
+    position: relative;
 }
 .min-head-menu .min-head-con .min-menu .min-menu-name{
     line-height: 39px;
@@ -600,8 +601,8 @@ ul{
 .xq{
     width: 1200px;
     margin: 0 auto;
-    height: 580px;
-    background-color: pink;
+    height: 500px;
+   
 }
 #img-box{
     width: 360px;
@@ -653,7 +654,7 @@ ul{
     left: 380px;
     top: 0px;
     overflow: hidden;
-    width: 400px;
+    width: 370px;
     height: 400px;
     border: 1px solid #ccc;
     display: none;
@@ -669,7 +670,8 @@ ul{
     width: 800px;
     float: right;
     height: 310px;
-    background-color: yellow;
+    
+    padding: 20px 0px;
 }
 .title{
     text-indent: 12px;
@@ -688,65 +690,120 @@ ul{
     color: #fff;
     text-indent: 0;
 }
-.price_info{
-    display: block;
-    clear: both;
-    position: relative;
-    background: #f9f9f9;
-    font-size: 12px;
-    padding: 10px 0;
+.title2{
+    width: 100%;
+    height: 70px;
+    background-color: #f9f9f9;
     margin-top: 15px;
+    display: flex;
+    line-height: 70px;
 }
-.text-box .price_info dl{
-    padding: 10px 0;
+.title2 span:nth-child(1){
+    padding-left: 15px;
+    margin-right: 11px;
+   
 }
-.text-box  dl{
+.title2-right{
+    width: 600px;
+    display: flex;
+    justify-content: space-between;
+}
+.price{
+    color: red;
+    font-size: 18px;
     
-    clear: both;
-    zoom: 1;
-    font-size: 0;
-    letter-spacing: 0;
 }
-.text-box dl dt{
-    text-indent: 12px;
-    float: left;
-    width: 72px;
-    height: 34px;
-    line-height: 34px;
-    vertical-align: top;
+.pingjia{
+   
     font-size: 12px;
-    color: #888888;
+}
+.pingjia .star{
+    width: 72px;
+    line-height: 18px;
+    display: inline-block;
+    background-repeat: no-repeat;
+    text-align: left;
+    margin-right: 5px;
+}
+.star i{
+    display: inline-block;
+    background: url("../images/indeximg/5.jfif");
+    width: 12px;
+    height: 12px;
+    background-size: auto 24px;
     overflow: hidden;
-    white-space: nowrap;
+    cursor: default;
+    margin-right: 2px;
+}
+.star i.on{
+    background-position: 0 top;
+}
+.pingjia span a{
+    cursor: pointer;
+}
+.btn{
+    width: 500px;
+    height: 40px;
+    padding-left: 74px;
+    
+    margin-top: 15px;
+    margin: 20px auto;
+    display: inline-block;
+}
+.text-box .btn button{
+    width: 162px;
+    height: 40px;
+    margin-right: 50px;
+    cursor: pointer;
+    border-style: none;
+    border-radius: 3px;
+}
+.addCart{
+    color: #fff;
+    background-color: #006000;
+   border-style: none;
+    border-radius: 3px;
+}
+.ts{
+    padding-top: 16px;
+    padding-left: 15px;
+    
+}
+.ts span{
+    float: left;
     margin-right: 15px;
 }
-.text-box .price_info dt{
-    height: 20px;
-    line-height: 20px;
-    font-size: 12px;
-    width: 60px;margin-right: 11px;
-    padding-left: 12px;
-    text-indent: 0;
+.count-num{
+    width: 100%;
+    height: 42px;
+    padding: 10px 0px;
+    display: flex;
+    align-items: center;
 }
-.text-box .price_info dd{
-    line-height: 20px;
-    font-size: 12px;
-}
-.text-box .price_info dl dd{
-    padding-bottom: 0;
-}
-.text-box dl dd{
-    float: left;
-    width: 585px;
-    text-align: top;
-    font-size: 0;
-    letter-spacing: 0;
-}
-.text-box .price_info dd .current-price{
-    font-size: 18px;
-    color: #c80000;
+.count-num span{
+    margin: 0 15px;
     float: left;
 }
-.text-box .price_info dd .current-price span{
-    font-size: 0.8em;
+.jj{
+    width: 120px;
+    height: 40px;
+    line-height: 40px;
+    border: 1px solid #ececec;
+}
+.jj input{
+    float: none;
+    width: 25px;
+    height: 30px;
+    margin: 0;
+    border: none;
+    color: #000000;
+}
+.count-num .jj button{
+    width: 40px;height: 30px;
+    border: none;
+    background-color: #fff;
+    font-size: 14px;
+    border: none;
+    outline: none;
+    cursor: pointer;
 }
